[project]
name = "publishing-core"
version = "0.1.0"
description = "Shared publishing primitives for UAVHQ + Digital Splendor"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "google-generativeai>=0.8",
    "google-api-python-client>=2.140",
    "google-auth>=2.34",
    "google-auth-oauthlib>=1.2",
    "pillow>=10.4",
    "pyyaml>=6.0",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["publishing_core"]
